In development:
	* New tweet editor is now smaller on blur
	* "Insert link" button is now disabled if we can't do it
	+ Displaying the tweet time

0.16:
	* Fix for the urls without protocol (thanks @Stammru)
	+ Separator between unread and old tweets

0.15:
	* Fix for the error message is not showing

0.14:
	+ Error message if extension can't add a new account
	+ Open the new not focused tab with middle button mouse click (or with metaKey + click in MacOS)
	* Popup resized from 350px to 400px in width
	+ Foursquare links are looks like an icon now
	* Hope bug with horizontal scroll on Windows with bigger fonts is fixed
	+ Button to insert the current page link into the tweet
	+ Options page
	+ Ability to change the avatar size in the home timeline

0.13:
	+ Reply to all with ctrl+click on reply button
	+ Old-style retweets with ctrl+click on retweet button
	- Reverted the popup autoheight function, for now I can't find the solution for this problem

0.12
	+ Link from static map image in profile to the google maps in new tab
	* "About" page icon changed
	* Bug with new Twitter authorization page is fixed

0.10 - 0.11
	* Home timeline max height bug is fixed (thanks @chakrygin)

0.9
	* Fixing cursor for tweet buttons in Mac OS
	* Extension popup now can't be larger than screen height
	* No more lowercased usernames
	* Fixing small authentication bug with retry

0.8
	* Critical fix for reply button

0.7
	+ Reply
	* No full timeline repaint on new tweet post
	+ Tweets delete and undo retweets
	+ Retweet
	* Fix for the tweet text selection from the end

0.6
	* Links in profile bio are now clickable
	+ Link to the twitter.com page on the profile page
	* Larger avatars on the profile page allowed, up to 96px in width
	* Small bug with friendship cache updater fixed

0.5
	* Fixed bug with paste into the tweet editor

0.4
	+ Bio and location information to the profile page
	+ Retweets are now visible

0.3
	+ Follow/unfollow users from the profile page

0.0.3