@@ -1,7 +1,8 @@
 In development:
 	* New tweet editor is now smaller on blur
 	* "Insert link" button is now disabled if we can't do it
-	+ Displaying the tweet time
+	+ Displaying the tweet time (optional)
+	+ Displaying the user Twitter client in tweet (optional)
 
 0.16:
 	* Fix for the urls without protocol (thanks @Stammru)
